<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/white"
              android:orientation="vertical"
              android:padding="20dp">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_profile"
            android:textColor="@color/black"
            android:textSize="18sp"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

        <ProgressBar
                android:id="@+id/profile_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

        <ImageView
                android:id="@+id/profile_picture"
                android:layout_width="100dp"
                app:srcCompat="@android:drawable/picture_frame"
                android:layout_height="100dp"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:baselineAligned="false">

            <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">

                <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/app_name"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                <TextView
                        android:id="@+id/tv_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_name"
                        android:text="@string/example_manager_id"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>

                <TextView
                        android:id="@+id/tv_current_role"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_id"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/example_manager_current_role"
                        android:textColor="@color/black"/>

                <TextView
                        android:id="@+id/tv_join_on"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_current_role"
                        android:text="@string/example_manager_join_on"
                        android:textColor="@color/text"/>

            </RelativeLayout>

            <RelativeLayout
                    android:id="@+id/don"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="bottom">

                <!--<Spinner-->
                        <!--android:id="@+id/spinner_year"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_alignParentEnd="true"-->
                        <!--android:layout_alignParentRight="true"-->
                        <!--android:padding="0dp" />-->

                <ImageView
                        android:id="@+id/tv_team_members"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@android:drawable/ic_menu_upload"
                        android:layout_centerHorizontal="true"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_team_members"
                        android:layout_centerHorizontal="true"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/download"
                        android:textAlignment="center"
                        android:textColor="@color/text"
                        android:textSize="12sp"/>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>