<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <LinearLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:id="@+id/content_feedback"
            android:paddingRight="20dp"
            android:paddingTop="20dp">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/tv_title_feedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/tv_date_feedback"
                    android:layout_toStartOf="@+id/tv_date_feedback"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/image"
                    android:textColor="@color/background"
                    android:textSize="18sp"/>

            <TextView
                    android:id="@+id/tv_date_feedback"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="7dp"
                    android:layout_toLeftOf="@+id/iv_delete_feedback"
                    android:layout_toStartOf="@+id/iv_delete_feedback"
                    android:text="@string/trigger"
                    android:textColor="@color/text"
                    android:textSize="11sp"/>

            <ImageView
                    android:id="@+id/iv_delete_feedback"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_delete" />

        </RelativeLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:baselineAligned="false">

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/tv_role"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weight"
                        android:textColor="@color/text"/>

                <TextView
                        android:id="@+id/tv_role_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/trigger"
                        android:textColor="@color/background"/>

                <TextView
                        android:id="@+id/tv_project_feedback"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/tugas"
                        android:textColor="@color/text"/>

                <TextView
                        android:id="@+id/tv_project_detail_feedback"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/trigger"
                        android:textColor="@color/background"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/tv_recipient"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gambar"
                        android:textColor="@color/text"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                    <ImageView
                            android:id="@+id/iv_prof_pic"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            app:srcCompat="@android:drawable/picture_frame" />

                    <TextView
                            android:id="@+id/tv_recipient_detail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="10dp"
                            android:layout_marginStart="10dp"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="@string/trigger"
                            android:textColor="@color/background"/>

                </LinearLayout>

                <LinearLayout
                        android:id="@+id/container_rating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                    <ProgressBar
                            android:id="@+id/rating_bar"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:indeterminate="false"
                            android:progress="50"
                            android:progressDrawable="@drawable/bg_pb_attitude" />

                </LinearLayout>

                <!--<TextView-->
                        <!--android:id="@+id/tv_helper"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_marginTop="5dp"-->
                        <!--android:text="@string/trigger"-->
                        <!--android:textColor="@color/text"/>-->

                <!--<TextView-->
                        <!--android:id="@+id/tv_helper_detail"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_marginTop="5dp"-->
                        <!--android:text="@string/trigger"-->
                        <!--android:textColor="@color/background"/>-->

            </LinearLayout>

        </LinearLayout>

        <View
                android:id="@+id/view_feedback"
                android:layout_width="match_parent"
                android:layout_height="2.5dp"
                android:background="@color/text" />

    </LinearLayout>

</LinearLayout>